# infra-demo

./: .gitignore  README.md
app/: .env  .gitignore  .gitlab-ci.yml  Cargo.toml  Dockerfile  README.md  compose.yaml
app/db/: todo.sqlite3-shm  todo.sqlite3-wal
app/db/migrations/: 20230824190431_init.up.sql
app/src/: handlers.rs  main.rs  repository.rs  templates.rs
app/src/static/css/: main.css
app/templates/: edit-task.html  index.html  remaining-tasks.html  task.html
manifests/: deployment.yaml
nginx/: Dockerfile  index.html  nginx.conf
terraform/: kube.tf  networking.tf  storage.tf  terraform.tfstate  terraform.tfstate.backup  variables.tf
