[package]
name = "myapp"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.6"
actix-web = "4.3"
# `askama` dependency is optional, use any templating crate you like
askama = "0.12.1"
serde = { version = "1.0", features = ["derive"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "mysql"] }
anyhow = "1.0"
dotenv = "0.15"
serde_json = "1.0.108"
mysql = "24.0.0"
base64 = "0.22.1"

[[bin]]
name = "myapp"
path = "src/main.rs" 
